# k8s-view

./: README.md  package-lock.json  package.json  rsw.toml  vite.config.ts
.github/workflows/: release.yml
@mywasm/foo/: Cargo.toml  LICENSE_MIT
@mywasm/foo/src/: lib.rs
src/: App.tsx  main.tsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: custion_client.rs  file.rs
src-tauri/src/: error.rs  main.rs
src-tauri/src/api/: cluster.rs
src-tauri/src/boot/: config.rs  server.rs
src-tauri/src/service/: pod.rs
src-tauri/src/utils/: init_client.rs
src/pages/Dashboard/: index.tsx
src/pages/Home/: index.tsx
src/pages/Layout/: index.tsx
src/pages/Workload/Pod/: index.scss  index.tsx
src/router/: index.tsx
src/store/: index.ts
src/store/modules/: kubernetes.ts
