[package]
name = "k8s-view"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "k8s_view_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
dirs = "5"
anyhow = "1"

kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["v1_24"] }
thiserror = "1"
once_cell = "1"
