[package]
name = "k8s-view"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "k8s_view_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
dirs = "5"
anyhow = "1"

kube = { version = "0.91.0", features = ["runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.22.0", features = ["v1_24"] }
thiserror = "1"
once_cell = "1"
tower = "0"
hyper-util = "0.1.3"
tokio= {version = "*", features = ["full"] }
# rustls = { version = "0.23.8", default-features = false }